UIEXT-2535: Use rich error/warning messages in Date&time nodes
UIEXT-2535 (Migrate Date&Time workflow tests to make use of the new nodes)